HTML and CSS for basic visible contentr done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Q&A</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/9d363c966e.js"
+      crossorigin="anonymous"></script>
   </head>
   <body>
-    <main></main>
+    <div class="container">
+      <main>
+        <h1>general questions</h1>
+        <div class="q-a">
+          <h2>do you accept all major credit cards?</h2>
+          <button><i class="fa-regular fa-square-plus"></i></button>
+          <div class="answer">
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.
+            </p>
+          </div>
+        </div>
+        <div class="q-a">
+          <h2>do you accept all major credit cards?</h2>
+          <button><i class="fa-regular fa-square-plus"></i></button>
+          <div class="answer">
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.
+            </p>
+          </div>
+        </div>
+        <div class="q-a">
+          <h2>do you accept all major credit cards?</h2>
+          <button><i class="fa-regular fa-square-plus"></i></button>
+          <div class="answer">
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.
+            </p>
+          </div>
+        </div>
+      </main>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
