--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <h2>do you accept all major credit cards?</h2>
           <button><i class="fa-regular fa-square-plus"></i></button>
           <div class="answer">
-            <hr />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
@@ -26,10 +25,9 @@
           </div>
         </div>
         <div class="q-a">
-          <h2>do you accept all major credit cards?</h2>
+          <h2>do you support local farmers?</h2>
           <button><i class="fa-regular fa-square-plus"></i></button>
           <div class="answer">
-            <hr />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
@@ -38,10 +36,9 @@
           </div>
         </div>
         <div class="q-a">
-          <h2>do you accept all major credit cards?</h2>
+          <h2>do you use organic ingredients?</h2>
           <button><i class="fa-regular fa-square-plus"></i></button>
           <div class="answer">
-            <hr />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
