--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
       crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container">
-      <main>
+    <section class="questions">
+      <div class="title">
         <h1>general questions</h1>
-        <div class="q-a">
-          <h2>do you accept all major credit cards?</h2>
-          <button><i class="fa-regular fa-square-plus"></i></button>
+      </div>
+      <div class="section-center">
+        <div class="question">
+          <div class="question-title">
+            <h2>do you accept all major credit cards?</h2>
+          </div>
+          <button class="question-btn">
+            <span class="plus-icon show-answer">
+              <i class="fa-regular fa-square-plus"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="fa-regular fa-square-minus"></i>
+            </span>
+          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
@@ -24,9 +35,18 @@
             </p>
           </div>
         </div>
-        <div class="q-a">
-          <h2>do you support local farmers?</h2>
-          <button><i class="fa-regular fa-square-plus"></i></button>
+        <div class="question">
+          <div class="question-title">
+            <h2>do you accept all major credit cards?</h2>
+          </div>
+          <button class="question-btn">
+            <span class="plus-icon show-answer">
+              <i class="fa-regular fa-square-plus"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="fa-regular fa-square-minus"></i>
+            </span>
+          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
@@ -35,9 +55,18 @@
             </p>
           </div>
         </div>
-        <div class="q-a">
-          <h2>do you use organic ingredients?</h2>
-          <button><i class="fa-regular fa-square-plus"></i></button>
+        <div class="question">
+          <div class="question-title">
+            <h2>do you accept all major credit cards?</h2>
+          </div>
+          <button class="question-btn">
+            <span class="plus-icon show-answer">
+              <i class="fa-regular fa-square-plus"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="fa-regular fa-square-minus"></i>
+            </span>
+          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
@@ -46,8 +75,8 @@
             </p>
           </div>
         </div>
-      </main>
-    </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
