--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="question">
           <div class="question-title">
             <h2>do you accept all major credit cards?</h2>
+            <button class="question-btn">
+              <span class="plus-icon">
+                <i class="fa-regular fa-square-plus"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="fa-regular fa-square-minus"></i>
+              </span>
+            </button>
           </div>
-          <button class="question-btn">
-            <span class="plus-icon show-answer">
-              <i class="fa-regular fa-square-plus"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="fa-regular fa-square-minus"></i>
-            </span>
-          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
@@ -37,16 +37,16 @@
         </div>
         <div class="question">
           <div class="question-title">
-            <h2>do you accept all major credit cards?</h2>
+            <h2>do you support local farmers?</h2>
+            <button class="question-btn">
+              <span class="plus-icon">
+                <i class="fa-regular fa-square-plus"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="fa-regular fa-square-minus"></i>
+              </span>
+            </button>
           </div>
-          <button class="question-btn">
-            <span class="plus-icon show-answer">
-              <i class="fa-regular fa-square-plus"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="fa-regular fa-square-minus"></i>
-            </span>
-          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
@@ -57,16 +57,16 @@
         </div>
         <div class="question">
           <div class="question-title">
-            <h2>do you accept all major credit cards?</h2>
+            <h2>do you use organic ingredients?</h2>
+            <button class="question-btn">
+              <span class="plus-icon">
+                <i class="fa-regular fa-square-plus"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="fa-regular fa-square-minus"></i>
+              </span>
+            </button>
           </div>
-          <button class="question-btn">
-            <span class="plus-icon show-answer">
-              <i class="fa-regular fa-square-plus"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="fa-regular fa-square-minus"></i>
-            </span>
-          </button>
           <div class="answer">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
